Correct an issue in the layout where the title of the calendar cannot be centered because the left header is too wide

--- a/src/main.css
+++ b/src/main.css
@@ -41,7 +41,7 @@ html .fc,
 	}
 
 .fc-header-left {
-	width: 25%;
+	width: 10%;
 	text-align: left;
 	}
 	
